# vintage-tactical-radio

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build-appimage.sh  build-deb-proper.sh  build-deb.sh  build-flatpak.sh  build.sh  clean-build.sh  io.github.vintage_tactical_radio.yml  make-all-executable.sh  make-executable.sh  rebuild.sh  run-optimized.sh  test-build.sh  verify-build.sh  verify-prd-alignment.sh
assets/: resources.qrc
assets/sounds/: knob-turn.wav.txt
assets/themes/: black-ops.qss  desert-tan.qss  military-olive.qss  navy-grey.qss  night-mode.qss
debian/: changelog  control  rules
docs/: API_Integration_Guide.md  Adding_New_Decoders.md  Audio_Fix_Summary.md  Digital_Decoder_Implementation.md  Generating_Icons.md  Implementation_Complete.md  PRD_Alignment_Summary.md  PRD_Implementation_Summary.md  PRD_Vintage_Tactical_Radio.md  Quick_Start_Guide.md  Settings_Dialog_Update.md  Technical_Implementation_Guide.md  UI_UX_Design_Specification.md  User_Guide.md
docs/archive/: Radio_Prompt.md  Radio_Research.md  radio_frequency_range_antennae_matrix.md  radio_frequency_range_matrix.md  radio_sdrpp_settings_matrix.md
packaging/: io.github.vintage_tactical_radio.metainfo.xml  vintage-tactical-radio.desktop
src/: main.cpp
src/audio/: AudioOutput.cpp  AudioOutput.h  RecordingManager.cpp  RecordingManager.h  SoundEffects.h  VintageEqualizer.cpp  VintageEqualizer.h
src/config/: MemoryChannel.cpp  MemoryChannel.h  Settings.cpp  Settings.h
src/core/: AntennaRecommendation.cpp  AntennaRecommendation.h  DSPEngine.cpp  DSPEngine.h  RTLSDRDevice.cpp  RTLSDRDevice.h  RingBuffer.cpp  RingBuffer.h
src/decoders/: ADSBDecoder.cpp  ADSBDecoder.h  CTCSSDecoder.cpp  CTCSSDecoder.h  DigitalDecoder.cpp  DigitalDecoder.h  RDSDecoder.cpp  RDSDecoder.h
src/dsp/: AGC.cpp  AGC.h  AMDemodulator.cpp  AMDemodulator.h  FMDemodulator.cpp  FMDemodulator.h  NoiseReduction.cpp  NoiseReduction.h  SSBDemodulator.cpp  SSBDemodulator.h  Scanner.cpp  Scanner.h  Squelch.cpp  Squelch.h
src/ui/: AntennaWidget.cpp  AntennaWidget.h  FrequencyDial.cpp  FrequencyDial.h  MainWindow.cpp  MainWindow.h  RecordingWidget.cpp  RecordingWidget.h  ScannerWidget.cpp  ScannerWidget.h  SettingsDialog.cpp  SettingsDialog.h  SpectrumDisplay.cpp  SpectrumDisplay.h  VintageKnob.cpp  VintageKnob.h  VintageMeter.cpp  VintageMeter.h  VintageTheme.cpp  VintageTheme.h
src/ui/decoders/: DecoderWidget.cpp  DecoderWidget.h
